Changes as per discussion with Aaron